# Nature_Atari

./: CMakeLists.txt
include/: environment.h  my_dqn.h
launch_files/: my_dqn.prototxt  my_dqn_solver.prototxt  test.bat  train.bat
src/: ale_environment.cpp  my_dqn.cpp  my_dqn_main.cpp
